--- a/iris-graphs-ESN.Rmd
+++ b/iris-graphs-ESN.Rmd
@@ -14,8 +14,9 @@ library(tidyverse)
 View(iris)
 
 iris_graph <- ggplot(iris, aes(x=Petal.Length, y=Petal.Width)) +
-  geom_point(color="dodgerblue") +
-  theme_classic()
+  geom_point(aes(color = Species)) +
+  theme_classic() +
+  facet_wrap(~Species)
 
 iris_graph
 ```
