--- a/iris-graphs-ESN.Rmd
+++ b/iris-graphs-ESN.Rmd
@@ -16,6 +16,7 @@ View(iris)
 iris_graph <- ggplot(iris, aes(x=Petal.Length, y=Petal.Width)) +
   geom_point(aes(color = Species)) +
   theme_classic() +
+  labs(x= "Petal Length Test Label", y= "Petal Width Example Label") +
   facet_wrap(~Species)
 
 iris_graph
